--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<title>Document</title>
-	<link rel="stylesheet" href="style.css">
+	<link rel="stylesheet" href="sass/sass.css">
 	
 </head>
 <body>
@@ -15,7 +15,70 @@
 <footer>
 
 
+<h3>No Fluff<br><span style="font-size: 2rem;">JOBS</span></h3>
 
+<ul>
+	
+<li>Company</li>
+<li>About us</li>
+<li>Careers</li>
+<li>Pricing</li>
+<li>Meet Us</li>
+<li>Our Clients</li>
+<li>Press</li>
+
+
+</ul>
+
+
+<ul>
+
+	<li>Knowledge</li>
+	<li>IT jobs for Juniors</li>
+	<li>IT recruitment guide</li>
+	<li>Job ad creator</li>
+	<li>Job ad format</li>
+	<li></li>
+	<li></li>
+
+
+
+</ul>
+
+<ul>
+
+	<li>Resources</li>
+	<li>Blog</li>
+	<li>Help Center</li>
+	<li>Job offers widgets</li>
+	<li>Store</li>
+	<li>GDPR</li>
+	<li>Privacy policy</li>
+	<li>Terms and conditions</li>
+	<li>Insights</li>
+
+
+
+
+
+</ul>
+
+<ul>
+
+
+	<li>Get in touch</li>
+	<li>Facebook</li>
+	<li>Twitter</li>
+	<li>Instagram</li>
+	<li>Email us</li>
+	<li>Subscribe to jobs</li>
+	<li></li>
+	<li></li>
+
+
+
+
+</ul>
 
     
 </footer>
