--- a/index.html
+++ b/index.html
@@ -18,8 +18,7 @@
 <h3>No Fluff<br><span style="font-size: 2rem;">JOBS</span></h3>
 
 <ul>
-	
-<li>Company</li>
+<a id="company">Company</a>
 <li>About us</li>
 <li>Careers</li>
 <li>Pricing</li>
@@ -33,7 +32,7 @@
 
 <ul>
 
-	<li>Knowledge</li>
+	<a id="knowledge">Knowledge</a>
 	<li>IT jobs for Juniors</li>
 	<li>IT recruitment guide</li>
 	<li>Job ad creator</li>
@@ -47,7 +46,7 @@
 
 <ul>
 
-	<li>Resources</li>
+	<a id="resources">Resources</a>
 	<li>Blog</li>
 	<li>Help Center</li>
 	<li>Job offers widgets</li>
@@ -66,7 +65,7 @@
 <ul>
 
 
-	<li>Get in touch</li>
+	<a id="getInTouch">Get in touch</a>
 	<li>Facebook</li>
 	<li>Twitter</li>
 	<li>Instagram</li>
